# rust-web-server-axum

./: Cargo.toml
api/: Cargo.toml
domain/: Cargo.toml
domain/src/: lib.rs  utils.rs
domain/src/adventures/: manager.rs  manager_impl.rs
domain/src/favorites/: manager.rs  manager_impl.rs
domain/src/users/: manager.rs  manager_impl.rs
extra/: Cargo.toml
extra/src/logger/: tracing_logger.rs
macros/: Cargo.toml
repository/: Cargo.toml
repository/src/: lib.rs
repository/src/db/: params.rs  read.rs  write.rs
search/: Cargo.toml
server_app/: Cargo.toml
server_lib/: Cargo.toml
util/: Cargo.toml
util/src/: lib.rs
util/src/i18n/: lang.rs
vars/: Cargo.toml
