[workspace]
resolver = "2"
members = [
    "api",
    "domain",
    "extra",
    "macros",
    "repository",
    "search",
    "server_app",
    "server_lib",
    "util",
    "vars",
]

[workspace.dependencies]
tokio = "1"
tracing = "0.1"
once_cell = "1"

[profile.dev]
lto = false
opt-level = 0
overflow-checks = true
incremental = true
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
opt-level = 'z'
overflow-checks = false
incremental = false
panic = "abort"
