[package]
name = "repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "repository"
path = "src/lib.rs"

[dependencies]
vars = { path = "../vars" }
macros = { path = "../macros" }
sqlx = { version = "0.8.2", default-features = false, features = [
    "runtime-tokio-native-tls",
    "macros",
    "chrono",
    "postgres",
] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
sql-builder = "3.1.1"
once_cell = { workspace = true }
meilisearch-sdk = ">=0.27.1"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
